# vlc2chromecast-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  config.rs  main.rs  monitor.rs  vlc.rs
