[package]
name = "vlc2chromecast"
version = "0.1.0"
edition = "2024"
description = "Stream local video files to Chromecast via VLC"
license = "GPL-3.0"

[dependencies]
eframe = "0.31"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2"
