[package]
name = "vlc2chromecast"
version = "0.1.0"
edition = "2024"
description = "Stream local video files to Chromecast via VLC"
license = "GPL-3.0"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wgpu", "x11", "wayland"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2"
wgpu = { version = "24.0", features = ["vulkan-portability"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "24.0", features = ["dx12", "angle"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
